[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/screen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/screen/CreateWorld.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
toScene = "res://scenes/Main.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.294118, 0.227451, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 25
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 25.0
margin_right = 1230.0
margin_bottom = 695.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 670.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/TitleContainer"]
margin_right = 300.0
margin_bottom = 333.0
size_flags_vertical = 3
text = "Sandbox Manager"
align = 1
valign = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TitleContainer"]
margin_top = 337.0
margin_right = 300.0
margin_bottom = 670.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/TitleContainer/ButtonsContainer"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
text = "New World"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/TitleContainer/ButtonsContainer"]
margin_top = 170.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 300, 150 )
text = "Quit"

[node name="FrameContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 1180.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/margin_right = 75
custom_constants/margin_top = 75
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75

[node name="CreateWorld" parent="MarginContainer/HBoxContainer/FrameContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 75.0
margin_right = 801.0
margin_bottom = 595.0
[connection signal="button_up" from="MarginContainer/HBoxContainer/TitleContainer/ButtonsContainer/Button" to="." method="onNewGamePressed"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/TitleContainer/ButtonsContainer/Button2" to="." method="onExitGamePressed"]
